Add openmoji SVGs

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check": "svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./jsconfig.json --watch",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"format": "prettier --write --plugin-search-dir=. .",
+		"postinstall": "./scripts/shell/openmoji.sh"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "next",
