--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
 	"license": "ISC",
 	"dependencies": {
 		"cookie-esm": "^1.0.1",
-		"firebase": "^9.9.0",
-		"firebase-admin": "^11.0.0"
+		"firebase": "^9.9.0"
 	}
 }
