Switch to using twitter emojis; implement emoji picker

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"@emoji-mart/data": "^1.0.3",
 		"cookie-esm": "^1.0.1",
+		"emoji-mart": "^5.2.0",
 		"firebase": "^9.9.0"
 	}
 }
